--- a/Prototipov1/TelaCadastroLogin.resx
+++ b/Prototipov1/TelaCadastroLogin.resx
@@ -120,66 +120,66 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAANUAAAEuCAYAAAAZYlftAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAA7dEVYdENvbW1lbnQAeHI6ZDpEQUYxTlpNYlhQUTo1LGo6
-        NjM1NDk4OTQyMDI0Njk0Njk4MSx0OjIzMTEyNTIxPOFr6AAADThJREFUeF7t3QuT1FQaxvH9/h9gtywv
-        hYXlLqKroogLotwvirAoOCiICIKwXESQYUDd3jw9YXWY95xO0s9JZzr/t+pXFE1Ocjp1Hro7l5O//PVf
-        L08A+BAqwIxQAWaECjAjVIAZoQLMCBVgRqgAM0IFmBEqwIxQAWaECjAjVIAZoQLMCBVgRqgAM0IFmBEq
-        wIxQAWaECjAjVIAZoQLMCBVgRqgAM0IFmBEqwIxQAWaECjAjVIAZoQLMCBVgRqgAM0IFmBEqwIxQAWaE
-        CjAjVIAZoQLMCBVgRqgAM0IFmBEqwIxQAWaECjAjVIAZoQLMCBVgRqgAM0IFmBEqwIxQAWaECjAjVIAZ
-        oQLMCBVgRqgAM0IFmBEqwIxQAWaECjAjVIAZoQLMCBVgRqgAM0IFmBEqwIxQAWaECjAjVIAZoQLMCBVg
-        RqgAM0IFmBGqAXrxo1cnb57YNdn/5cHJp5dOb6LX9e9aLmqPxSJUA7Hj2NuTzy+fndy6f3vSprS82ql9
-        tF70j1At0Av7tk0OnD8yuffLT3VE5qu7D+5NPjl3eLreaHvoB6FagL/tfWX6Fe7R2qM6Dt7SerV+bSfa
-        PsoiVD17/fCbk5s/3aqHf9nSdrS9qB8oh1D1SF/Nfv3tt3rI91NPf3063W7UH5RBqHqgr2FffH++HuaL
-        KW2fr4P9IFSFaSBfuvldPbSb1/1HP0/bnfr2zOTIyonqN9Kh6Z/6u17Xv7cttSNY5RGqwr6+frEe0rPr
-        7sN7k6MXTk62H9wRrut5Wk7Lq13TWvnhm3Bd8CFUBelTpUnpkPqe0/vCdTSl9k0PzesEcrQOeBCqQt47
-        9WE9hNP1+39/nwbP9ZVM56e0Pq13Vql/0TowP0JVwEv7t08ePv6lHr5x6ajcrs/2hO3npfVq/blS/9TP
-        qD3mQ6gK+OrahXroxqWTs68fKXv+6B9H35p5cvnc1ZWwLeZDqMw0mHNfv/QJ8taJXWFbt7dPvp/9xFI/
-        S4d7jAiV2aWbl+shG5cuH4ralaLt5erij9+G7dAdoTLSIe7cp5TOE0XtSsudJ1N/mx7CRzOEykiHqlOl
-        y5NePfD3sF1p2m7u8qgTF0+F7dANoTLKXeVw9sq5sE1ftP1Uqd9RG3RDqExeO/xGPUTjWtSn1DPafq7U
-        /6gd2iNUJgfOH62H5+b64e6NsE3f1I9Uqf9RG7RHqExy56aOf/1Z2KZv6keqOGflQ6hMcjce7jz+btim
-        bzo/lir1P2qD9giVSe6ypKHMeqR+pEr9j9qgPUJlkqpHa6vh8oui/qQqWh7tESqTVD1YfRguvyjqT6qi
-        5dEeoTJJFaEaH0Jlkro8aWi/VVJf/3TFRbQ82iNUJrlPgK1woGJon6hbGaEyyR1SH8qUzOpHqm7cuxm2
-        QXuEyiQ3BZlmQYra9E39SJX6H7VBe4TK5NBXx+rhubmu3bketumb+pEqJtz0IVQmuQtqdRBjCBfU5u71
-        4oJaH0JllJsiTLMcRW36krvXS/MGRm3QDaEyys3zt/Z0bfLKx6+F7UrTdrX9VC068MuGUBnN+oq1qNlh
-        c1fQD+Gr6bIhVGaaSCVXH5yZbybatrS9XDHxix+hMtO5oNynlb6G9TUtmLaT+9qnfmpKtagtuiNUBeiG
-        v1z1MZmm1s9kmotBqArQdMqrTx7XQzcuDfidx98J289Ln5azAqX+Me1zGYSqkKYPKDi8csL6zCidhJ71
-        tEZtlwcUlEOoCsqdG/pz3bp/e/LOp7vDdTSl9k2fJcyjdMoiVAXpE+jbzOywz9eNez9OPj53uPFV7VpO
-        0zqrXdNSf3iaYlmEqrC2wVLp65k+dXSR65GV49Pg7D378fRP/V2v699zRxmjIlD9IFQ90ECe9Xid0qXt
-        E6h+EKoe6Urwtp8u85a2xxXo/SJUPdFJVn1ty52MLVHanrbLSd7+EKrCPji9r/FRudKlfqg/UT/hQ6gK
-        0UGF2z/fqYfzsEr9Uv+ifmN+hMpMUyvrvNNWKH1y9fWo1DEhVCa65Md1hE/P6b394M7k+t0b06cgrlz/
-        5v/0d72uf5/1BPqmpX5zyZIPoTLQ1Qy5udRzpUuKFBJd5aBLh9re26Tl1U7ttZ5ZlyilSv2f96oOrCNU
-        c9B5n88vn62HZfPSwNd9TLs/3zt5Yd+2cN1daX17zuybrr9LwHQXMOez5kOoOtLXpe9vX6uHYrPSY0B1
-        zqivyTW1nYPnj2QfmxqV3ldffVxGhKoD3auUm+Tl+dLRtg//vX9hnwDarrbf5mik3l9fN1MuG0LVUpOb
-        /57V2tMnkwPVJ8VQvk6pH+qP+tWk+riZchkRqhbaBEpH1BY1e9Is6pcmoWlSBKs9QtWQJptsEih9CuiK
-        8mgdQ6N+NvnU0vvefnBHuA5sRqga2PbJ641+Q936+faWG3zqr/o9q/T+tR+idWAjQjWDfoc0uXZvKx8x
-        U7+bHMn84e6Nwfw+HDJCNcPZK+fqIZWuC9Xvk60+2NR/vY9Zpf0RtccfCFWGfnPMqq+vXwrbblWzJgNV
-        6fB81BbrCFWCfj/MuvdpGW9P1/uZdfu/9stQj2wOAaFKuHTzcj2E4tLvrGX9faFLnWb9jtT+idqCUIX0
-        9SZXOsS87JP66/3NmhCUr4ExQvUc/S+du1ZOcz7s+mxP2HbZ6H3m5tTQflrWT+t5EKrnHL1wsh4ycZ35
-        7ouw3bLS+82VpkyL2o0ZofoTXXmeOzjxYPWB/VaNodM5LL3vVGl/cUX7RoTqT/S/bq7GOv/4rHnh+bTa
-        iFDV9Nsgd/fu5VtXwnZjoaspUqX9xm+rPxCq2qwTvXo8TdRuLP558v16T8S1VS4i7gOhquWufRv7p9Qz
-        2g+p0v6L2owRoaronEzu0DEToqzTIfZUaf9xFfs6QlU5snKiHhqbS0e+ojZjlTsSqP0YtRkbQlXR1F6p
-        OnnxVNhmrLQ/UnXtzvWwzdiMPlQ6x5KbymvZL0dqSzc1pkr7kXNWhGqy+/TeekhsLt3tGrUZu9xd0Nqf
-        UZsxGX2oNHlkqsZ2SVJTuRs3tT+jNmMy+lBd+c/VejhsLp7gHstdYaH9GbUZk9GHKnd7AzfixbRfUqX9
-        GbUZk1GHKjc4Hq2thm2w7jH/GSWNOlQ7j79bD4PNxRUCebkrUMZ+SdeoQ6WnY6Tq3NWVsA3W5Z7Fpf0a
-        tRmLUYfqwPmj9TDYXHreU9QG67R/UjX2p+GPOlS5gXHoq2NhG6zLXdo19v+QCFWidFu9rh5ALDftAKEK
-        XhyLXKio7kWoghfHglCVKUIVvDgWhKpMEargxbEgVGWKUAUvjgWhKlOEKnhxLAhVmSJUwYtjsf/Lg9O7
-        fuGl/Rrt77EYdaiAEggVYEaoADNCBZgRKsCMUAFmCwmVDrkCfYjGX2kLCRVF9VXR+CuNUFFLXdH4K41Q
-        UUtd0fgrjVBRS13R+CuNUFFLXdH4K41QUUtd0fgrbVChWnv6ZHrbANCGxk2qovFX2qBC9WD1Ybg8kKNx
-        k6po+dIIFbY8QlVJFaFCF4SqkipChS4IVSVVhApdEKpKqggVuiBUlVQRKnRBqCqpIlToglBVUkWo0AWh
-        qqSKUKELQlVJFaFCF4SqkipChS4IVSVVhApdEKpKqggVuiBUlVQRKnRBqCqpIlToglBVUkWo0AWhqqRq
-        6KHaceztcMJGee3wG2Ebee/Uh2EbefGjV8M2Ei3/TLS8aH3R8qJ+RG1E/Y/aiN531GYoCFUlVUMPlW7d
-        TtX+Lw+FbUQPQkvV9kM7wjaSq2h50fpSpX5EbUT9T5Xed9RmKAhVJVWEaqNcRcsLodpY0fKlEaoWCNUw
-        EapKqgjVRrmKlhdCtbGi5UsjVC0QqmEiVJVUEaqNchUtL4RqY0XLl0aoWnjn093TARbJHXbWYemojby0
-        f3vYRqLln4mWF60vWl7Uj6iNqP9RG9H7jtoMBaGqpGroocIwEapKqggVuiBUlVQRKnRBqCqpIlToglBV
-        UkWo0AWhqqSKUKELQlVJFaFCF4SqkipChS4IVSVVhApdEKpKqggVuiBUlVQRKnRBqCqpIlToglBVUkWo
-        0AWhqqSKUKELQlVJFaFCF4SqkipChS4IVSVVhApdEKpKqlafPJ7enQq0oXGTqmj8lTaoUFGUu6LxVxqh
-        opa6ovFXGqGilrqi8VcaoaKWuqLxVxqhopa6ovFXGqGilrqi8VfaQkIVTdgIlBCNv9IWEipgmREqwIxQ
-        AWaECjAjVIAZoQLMCBVgRqgAM0IFmBEqwIxQAWaECjAjVIAZoQLMCBVgRqgAM0IFmBEqwIxQAWaECjAj
-        VIAZoQLMCBVgRqgAM0IFmBEqwIxQAWaECjAjVIAZoQLMCBVgRqgAM0IFmBEqwIxQAWaECjAjVIAZoQLM
-        CBVgRqgAM0IFmBEqwIxQAWaECjAjVIAZoQLMCBVgRqgAM0IFmBEqwIxQAWaECjAjVIAZoQLMCBVgRqgA
-        M0IFmBEqwIxQAWaECjAjVIAZoQLMCBVgRqgAM0IFmBEqwIxQAWaECjAjVIAZoQLMCBVgRqgAM0IFWL08
-        +R+taO4mXDQcNAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAANUAAAEuCAYAAAAZYlftAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAADt0RVh0Q29tbWVudAB4cjpkOkRBRjFOWk1iWFBROjUsajo2MzU0OTg5NDIwMjQ2
+        OTQ2OTgxLHQ6MjMxMTI1MjE84WvoAAANOElEQVR4Xu3dC5PUVBrG8f3+H2C3LC+FheUuoquiiAui3C+K
+        sCg4KIgIgrBcRJBhQN3ePD1hdZj3nE7Sz0lnOv+36lcUTU5yOnUeujuXk7/89V8vTwD4ECrAjFABZoQK
+        MCNUgBmhAswIFWBGqAAzQgWYESrAjFABZoQKMCNUgBmhAswIFWBGqAAzQgWYESrAjFABZoQKMCNUgBmh
+        AswIFWBGqAAzQgWYESrAjFABZoQKMCNUgBmhAswIFWBGqAAzQgWYESrAjFABZoQKMCNUgBmhAswIFWBG
+        qAAzQgWYESrAjFABZoQKMCNUgBmhAswIFWBGqAAzQgWYESrAjFABZoQKMCNUgBmhAswIFWBGqAAzQgWY
+        ESrAjFABZoQKMCNUgBmhAswIFWBGqAAzQgWYESrAjFABZoQKMCNUgBmhAswIFWBGqAAzQgWYEaoBevGj
+        Vydvntg12f/lwcmnl05votf171ouao/FIlQDsePY25PPL5+d3Lp/e9KmtLzaqX20XvSPUC3QC/u2TQ6c
+        PzK598tPdUTmq7sP7k0+OXd4ut5oe+gHoVqAv+19ZfoV7tHaozoO3tJ6tX5tJ9o+yiJUPXv98JuTmz/d
+        qod/2dJ2tL2oHyiHUPVIX81+/e23esj3U09/fTrdbtQflEGoeqCvYV98f74e5ospbZ+vg/0gVIVpIF+6
+        +V09tJvX/Uc/T9ud+vbM5MjKieo30qHpn/q7Xte/ty21I1jlEarCvr5+sR7Ss+vuw3uToxdOTrYf3BGu
+        63laTsurXdNa+eGbcF3wIVQF6VOlSemQ+p7T+8J1NKX2TQ/N6wRytA54EKpC3jv1YT2E0/X7f3+fBs/1
+        lUznp7Q+rXdWqX/ROjA/QlXAS/u3Tx4+/qUevnHpqNyuz/aE7eel9Wr9uVL/1M+oPeZDqAr46tqFeujG
+        pZOzrx8pe/7oH0ffmnly+dzVlbAt5kOozDSYc1+/9Any1oldYVu3t0++n/3EUj9Lh3uMCJXZpZuX6yEb
+        ly4fitqVou3l6uKP34bt0B2hMtIh7tynlM4TRe1Ky50nU3+bHsJHM4TKSIeqU6XLk1498PewXWnabu7y
+        qBMXT4Xt0A2hMspd5XD2yrmwTV+0/VSp31EbdEOoTF47/EY9RONa1KfUM9p+rtT/qB3aI1QmB84frYfn
+        5vrh7o2wTd/Uj1Sp/1EbtEeoTHLnpo5//VnYpm/qR6o4Z+VDqExyNx7uPP5u2KZvOj+WKvU/aoP2CJVJ
+        7rKkocx6pH6kSv2P2qA9QmWSqkdrq+Hyi6L+pCpaHu0RKpNUPVh9GC6/KOpPqqLl0R6hMkkVoRofQmWS
+        ujxpaL9VUl//dMVFtDzaI1QmuU+ArXCgYmifqFsZoTLJHVIfypTM6keqbty7GbZBe4TKJDcFmWZBitr0
+        Tf1IlfoftUF7hMrk0FfH6uG5ua7duR626Zv6kSom3PQhVCa5C2p1EGMIF9Tm7vXiglofQmWUmyJMsxxF
+        bfqSu9dL8wZGbdANoTLKzfO39nRt8srHr4XtStN2tf1ULTrwy4ZQGc36irWo2WFzV9AP4avpsiFUZppI
+        JVcfnJlvJtq2tL1cMfGLH6Ey07mg3KeVvob1NS2YtpP72qd+akq1qC26I1QF6Ia/XPUxmabWz2Sai0Go
+        CtB0yqtPHtdDNy4N+J3H3wnbz0uflrMCpf4x7XMZhKqQpg8oOLxywvrMKJ2EnvW0Rm2XBxSUQ6gKyp0b
+        +nPdun978s6nu8N1NKX2TZ8lzKN0yiJUBekT6NvM7LDP1417P04+Pne48VXtWk7TOqtd01J/eJpiWYSq
+        sLbBUunrmT51dJHrkZXj0+DsPfvx9E/9Xa/r33NHGaMiUP0gVD3QQJ71eJ3Spe0TqH4Qqh7pSvC2ny7z
+        lrbHFej9IlQ90UlWfW3LnYwtUdqetstJ3v4QqsI+OL2v8VG50qV+qD9RP+FDqArRQYXbP9+ph/OwSv1S
+        /6J+Y36EykxTK+u801YofXL19ajUMSFUJrrkx3WET8/pvf3gzuT63RvTpyCuXP/m//R3va5/n/UE+qal
+        fnPJkg+hMtDVDLm51HOlS4oUEl3loEuH2t7bpOXVTu21nlmXKKVK/Z/3qg6sI1Rz0Hmfzy+frYdl89LA
+        131Muz/fO3lh37Zw3V1pfXvO7Juuv0vAdBcw57PmQ6g60tel729fq4dis9JjQHXOqK/JNbWdg+ePZB+b
+        GpXeV199XEaEqgPdq5Sb5OX50tG2D/+9f2GfANqutt/maKTeX183Uy4bQtVSk5v/ntXa0yeTA9UnxVC+
+        Tqkf6o/61aT6uJlyGRGqFtoESkfUFjV70izqlyahaVIEqz1C1ZAmm2wSKH0K6IryaB1Do342+dTS+95+
+        cEe4DmxGqBrY9snrjX5D3fr59pYbfOqv+j2r9P61H6J1YCNCNYN+hzS5dm8rHzFTv5scyfzh7o3B/D4c
+        MkI1w9kr5+ohla4L1e+TrT7Y1H+9j1ml/RG1xx8IVYZ+c8yqr69fCttuVbMmA1Xp8HzUFusIVYJ+P8y6
+        92kZb0/X+5l1+7/2y1CPbA4BoUq4dPNyPYTi0u+sZf19oUudZv2O1P6J2oJQhfT1Jlc6xLzsk/rr/c2a
+        EJSvgTFC9Rz9L527Vk5zPuz6bE/Ydtnofebm1NB+WtZP63kQquccvXCyHjJxnfnui7DdstL7zZWmTIva
+        jRmh+hNdeZ47OPFg9YH9Vo2h0zksve9UaX9xRftGhOpP9L9ursY6//iseeH5tNqIUNX02yB39+7lW1fC
+        dmOhqylSpf3Gb6s/EKrarBO9ejxN1G4s/nny/XpPxLVVLiLuA6Gq5a59G/un1DPaD6nS/ovajBGhquic
+        TO7QMROirNMh9lRp/3EV+zpCVTmycqIeGptLR76iNmOVOxKo/Ri1GRtCVdHUXqk6efFU2GastD9Sde3O
+        9bDN2Iw+VDrHkpvKa9kvR2pLNzWmSvuRc1aEarL79N56SGwu3e0atRm73F3Q2p9RmzEZfag0eWSqxnZJ
+        UlO5Gze1P6M2YzL6UF35z9V6OGwunuAey11hof0ZtRmT0Ycqd3sDN+LFtF9Spf0ZtRmTUYcqNzgera2G
+        bbDuMf8ZJY06VDuPv1sPg83FFQJ5uStQxn5J16hDpadjpOrc1ZWwDdblnsWl/Rq1GYtRh+rA+aP1MNhc
+        et5T1AbrtH9SNfan4Y86VLmBceirY2EbrMtd2jX2/5AIVaJ0W72uHkAsN+0AoQpeHItcqKjuRaiCF8eC
+        UJUpQhW8OBaEqkwRquDFsSBUZYpQBS+OBaEqU4QqeHEsCFWZIlTBi2Ox/8uD07t+4aX9Gu3vsRh1qIAS
+        CBVgRqgAM0IFmBEqwIxQAWYLCZUOuQJ9iMZfaQsJFUX1VdH4K41QUUtd0fgrjVBRS13R+CuNUFFLXdH4
+        K41QUUtd0fgrjVBRS13R+CttUKFae/pketsA0IbGTaqi8VfaoEL1YPVhuDyQo3GTqmj50ggVtjxCVUkV
+        oUIXhKqSKkKFLghVJVWECl0QqkqqCBW6IFSVVBEqdEGoKqkiVOiCUFVSRajQBaGqpIpQoQtCVUkVoUIX
+        hKqSKkKFLghVJVWECl0QqkqqCBW6IFSVVBEqdEGoKqkiVOiCUFVSRajQBaGqpGroodpx7O1wwkZ57fAb
+        YRt579SHYRt58aNXwzYSLf9MtLxofdHyon5EbUT9j9qI3nfUZigIVSVVQw+Vbt1O1f4vD4VtRA9CS9X2
+        QzvCNpKraHnR+lKlfkRtRP1Pld531GYoCFUlVYRqo1xFywuh2ljR8qURqhYI1TARqkqqCNVGuYqWF0K1
+        saLlSyNULRCqYSJUlVQRqo1yFS0vhGpjRcuXRqhaeOfT3dMBFskddtZh6aiNvLR/e9hGouWfiZYXrS9a
+        XtSPqI2o/1Eb0fuO2gwFoaqkauihwjARqkqqCBW6IFSVVBEqdEGoKqkiVOiCUFVSRajQBaGqpIpQoQtC
+        VUkVoUIXhKqSKkKFLghVJVWECl0QqkqqCBW6IFSVVBEqdEGoKqkiVOiCUFVSRajQBaGqpIpQoQtCVUkV
+        oUIXhKqSKkKFLghVJVWECl0QqkqqVp88nt6dCrShcZOqaPyVNqhQUZS7ovFXGqGilrqi8VcaoaKWuqLx
+        Vxqhopa6ovFXGqGilrqi8VcaoaKWuqLxV9pCQhVN2AiUEI2/0hYSKmCZESrAjFABZoQKMCNUgBmhAswI
+        FWBGqAAzQgWYESrAjFABZoQKMCNUgBmhAswIFWBGqAAzQgWYESrAjFABZoQKMCNUgBmhAswIFWBGqAAz
+        QgWYESrAjFABZoQKMCNUgBmhAswIFWBGqAAzQgWYESrAjFABZoQKMCNUgBmhAswIFWBGqAAzQgWYESrA
+        jFABZoQKMCNUgBmhAswIFWBGqAAzQgWYESrAjFABZoQKMCNUgBmhAswIFWBGqAAzQgWYESrAjFABZoQK
+        MCNUgBmhAswIFWBGqAAzQgWYESrAjFABZoQKMCNUgBmhAswIFWBGqAAzQgVYvTz5H61o7iZcNBw0AAAA
+        AElFTkSuQmCC
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
