--- a/Prototipov1/MenuReciboDoacao.resx
+++ b/Prototipov1/MenuReciboDoacao.resx
@@ -120,99 +120,99 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAANUAAAEuCAYAAAAZYlftAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAA7dEVYdENvbW1lbnQAeHI6ZDpEQUYxTlpNYlhQUToyLGo6
-        MTU2MzE1OTQxNzM3NjQ3MjQ0NCx0OjIzMTEyNTIxgnXaUAAAFPFJREFUeF7tnWl709YWRu///wG3vW0p
-        bekELaUMpUwJM2EIBAgEKIFAJkISEgKEqYCuX0nGyvG2LSvbwT6s93nWhyZHEpW9cqQz/ue/h7clAOAH
-        UgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAM
-        UgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAM
-        UgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAM
-        UgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAM
-        UgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeBM
-        30j1x4X9ycrz1eTDhw/QJQ+XZpJvh3807ytsPX0h1ZdHvk2Wn60kpHqWni0jVp/QF1L97+h3yfsP7/Ov
-        B6maR6sLyVe1e2ndY9g6+kYq4hM9Cup+WvcZtoa+lerp+lpya/af5PbcXQiYmL2T/Pv+XX6nmoNYn5a+
-        lepW7YtjlYWMl29e5XfKzuTCVPJF7V3VOhZ6C1INKJ2kUm7O3EasTwBSDShlpFJSsQ4j1laCVANKKNXq
-        i6fJ0rMn+X9tzJWp6+Y5oDcg1YASSrW4tpR8d+Ln5PHTpfwnGzPyzyXzPOAPUg0ollS6jz+e2pWsvXyW
-        /3RjRu4g1laAVANKK6n0u3ZinZo413Qu8CV6qdT6dfDKkeT4jdPp45FVxosvj2yvXetoeq1eDxlqJ5Vo
-        JZbGCh67fmLDucCXqKWSUOoorefF6/X0y2aV9eCf+cn8Skny/NWL5PsTv5jlPOgkldh17s/k1dvXeYlG
-        JNbRa4jVK6KWasepnU1fqnN3LpplN8vPZ35vutapW7171CojlfhtpLVYqlXD8rB5opbqp9O/JW//fZuf
-        Mcvl+9fMsptl94X9ybtg6NC1BzfMsh6UlUpIrNeGWG/f/ZvsvXTQPAaqE61Umk7y1+Ujyb+1L04xt+f+
-        Sb4Z2mEeUxW9Sx25djx5/37jSPu7j+4lXx/7wTxms3QjlThw+XCT9Api+ROdVPoSj94bM/8yKx9q6Ms/
-        tfgwfeewzlEWyTk6OZa8Cr7g9aTX+vA+ubfwIPn17B/mOarSrVRCf2RaibX7/D7zGOieqKTSO5RGFpSN
-        arETN8+Y5+qE3qFW19fyM3WOruXZ6lZFKvHXFVus9dcvk1/P7DaPge6IRqptwz92JVQ9qrUOXR0yz9mK
-        7078kqy8WM3PUD7vatfSl9o6Z7dUlUqoyV8NFWEk1i+ItWmikerq1Hh+ZPfR3K1u+pXGH07kR3YfrcPh
-        8U63GanEyYmzLcXqZbfD50AUUqnm0JchzP3HD9IGhL0XD6Yv4/tHDyWX712tvW+9yUs0cuz6SfPcIT+c
-        /DXt7wpz//HD5PDV4cK1Dqfvdm+C1kdF/ybr3N2wWalEK7FU4393vLcd5TEThVR7Lh7Ij2pEHbFWWZG1
-        hIUtdffNsiH7Rv9u+iLeqV2r1fSKQ2PHmt5hNKPZKtsNHlIJ/ZFBLF+ikErvCGHavbuohXA5mCYxt/LI
-        LBtiXevPi3+ZZYX+39bWNw4Xml6eTZv8rfJl8ZJKjE1dN8VaqYnFCk3dE4VUR64N50c1op9ZZYVqlZnl
-        ubxkFj0qWmVDjl4/kR/RiJqqrbJ15lcW8pJZJhfK1Yrt8JRKtBJrfnWh9kfoe/MYsIlCKo0YCL8Qj58u
-        JtuP/2SWF+qXefHqRVpW4/TK9iPtuXCg6XFu8elSsm24deOD/n11CZ69fO7SZ+Utlbg7fy8/28bojwJi
-        lScKqdSa9uR582KcL9+8TEdQaFCtuDF9K7lw93L6TqVrCrV0aUSEdV4LPTqqBS/M+uv19F2pfq3x6Yn0
-        WqrFql6rHb2QSjW4RoFYkVibPf/nQhRSieHxU/mR5aIWvOM3qnX8npw4l5+lXNQyWbWTuRW9kEpoZH8r
-        sSYf3WchmRJEI9WXR7enLXjd5vrDm10vjNLui9cuGmDbzzVVHd0PNdxY0T1GrPZEI5X4qvbcX5w/VTZV
-        poPoHUMrFX1IR/iVz9nb583zdUsvpRK6l/MtxbqHWG2ISqo6f1w4kD6qvPm3uZPXih7PNG7QOlcn1Jyu
-        hSvLXksyeExe7LVUIhNrY8tlPRrBYh2zGYaun0wbjdSYc/b2hfT6Vrl+JxqpJJIaJdRAsKMwzEYfjBoI
-        9LMdJ3emoyqshobTt0Y2nK8du8/vT6+lhg+ds/7z8Fr7atfSEKgwHutEbIVUQo1A1jhH1dBqhreOqcKu
-        c3uaWnDV+HNqYmTgasUopNJkxOJUD3XsfjPUeh7TztoHGA4fulerbayyIWoOb75Wu+b0vU0TJduN9ijL
-        Vkklth//2RarJoGHWJJGw7xaRX+Y1BA1KHJFIdXJm2fzo7KoH0k1l1VWqEZZWlvOS2fZzIiKdvOy9EUI
-        a6vZJ3ObbrDYSqmEhiy1EmuzNa/6/jpF19Fn9vdY/y8BEIVUh8aG8qMa0ZffKiu+P/Hrx47ferRThlU2
-        RINmw7S7lh4D1V9WjN73rLLdEEqliZLFfrJeoOFVVjYjlv7oTC/Z57Wia+kPSD/PVo5CKs0BCjeNe/Fq
-        PX1OD8uq81bb0YS5NDnWVNZi18ifTVP0tRSYRk2EZfVYaDW9a7ZwWLZbQqk+dfRl33vpb/Pf2g51xIdR
-        w1E4jCyMrjf3ZD6t5azzfkqikErHW/0qEk2PXvqAZmqPXAurj82pGPqZJaCFHtusFjF9yBrZXb/Wo9q1
-        QvkUPZr2YphSP0R9fta/tRW6l/pMitF9PHPrfPJF7fcaFK3hZu3yvlZeNbRX/58HUUgl9Bev6han6m+y
-        ztmKVouolMmNmVtddzZbTLV5sf9U6fY+SpowqvWLTem6VxocbbWi1iMRPeaoeRGNVEKL8HcbdXBWmd5w
-        4e5o+mF2E/3V9Zj1K9Svpsefbv8NvUw3UqlmCbs29P8yNH7KLK93r6HxrB/Livq1rOM+BVFJpb9qGs9n
-        LR4ZRh/gndq7lda2sM5VBo3na7VqUxi96HsJ1Q/oXofpRiotghNGE0c7jcfUgjvhE8nbd2/TbhKr/Kcg
-        KqnqfDv8U/pc/mBxpukvuR4jNNt1p9OSYZJSHcdqPQyvpUeZy/ev1a7VPx+4J2HKSqUd9MOJm/XoHqrv
-        TzOmrWOt9UE089oq+6mIUqo61gq1VyJZobYfCFNWKjW/d4rk0uPyvkKLolp5w3us4WE/Vhxi1is+O6lU
-        c1hlN0s6ciJo7dPCL1bZWAhTRirVUhrbVzaSSy27f9T+aOlxPUy3LY5bQdRShWsB6gM62KMeeQ2LCluo
-        1EpolY2FMGWkshqT9LjXagfIevTZhTMC9O78Q2HsZb8QtVRC0+YX15bT9xvNxO3l+DH18j9eW0qvdb72
-        5emnvpNeEKaTVF/X/vCE/WtqdNAgZzV8aP2PbhZE7dcngeilgt4RppNUFyev5CUbmVme3VBGcqlVtVXT
-        eT0altWvS6ghFVQmTDuptAhPOOdMS2632hhB3wm1qobjJutRP6F1XD+AVFCZMO2kUgNRmKnFabNsEWvU
-        heZZbevjPj+kgsqEaSWVlsoOx0GWGQOpd1KNGilGDRZeSxL0CqSCyoRpJdX49K28RCN35jp32B66eiwv
-        3cja+lry1dH+nmaPVFCZMJZUWl4g7LBVrdVpy57/Hd3eNEJdtZQ2VbDK9xNIBZUJY0lV3LG/njIdtkev
-        Hc9LN6IFUyWbVb6fQCqoTJhQKtVGql2KUS2ld6xiuRB9H8L+KvVnqR/LKt9vIBVUJkwolRbTCVNmPOSw
-        sQ7I0rMnLPzSDUg1mIQpSqWxkGHUT6UZBMVzhGi5g7DjV/1ZXtu6bgXRSHX46lA6zV1DhKAcC08Xu97v
-        uEiYolTa/T9MmcHMZ26fz0s3on+nVbZfiUIqTVCrOr39c4/eedotsdaOMHWpNF0jzMvXL9NaKDxHEXXo
-        hrWUJi5qbKBVvl+JQqrTEyP5UaRKtG6idV87EaYuVbgGu8TV6PTw+JCLdy/nRzQyuzxnlu1nopBKKyFR
-        U1WLvvB6/7HuayfCSCrVKmG0XFyZWkqDZIvRu1Q/r+/XimjeqfRuoCEt9QXuoTN6B/V8p5qYvd20l3La
-        YVuiJtSM7DBll+LuN6KRCraeMNpIL4zk7TSvTLughDO09eRRtQb91CAVVKZTVEtpZIR1bJGxqfH8iEa0
-        uZxVdhBAKqhMp2hdP006tI6to7GBencqRqMutL6IVX4QQCqoTLuoljp8bdg8rsjEzO38iEa0RqJVdlBA
-        KqhMu2ghF+uYIunGEkEtpVEXHjtNfkqQCirTKqqlOg0r0mOhthQKc/WB/7anWw1SQWVaZfbJvFm+iFYI
-        lnzFaAntQa+lBFJBZaxIlE57RqmWerA4nR/RyKXJK2b5QQOpoDJWtD+XVbaINiIPo1qqyu4r/UhUUuk8
-        WrFUk+CgM7pf1n0sgzbXDqNaqtNiLqql9HhYjI47d+eiWX4QiUIq9dirA1GzQ/UBQTl0v67W7pt1Tzuh
-        yYZhJksMK7K2I9X+y18XNnobdKKQyppqQMrnr8vdTQDU5uDNS46977iYi2buPlrduLWr5O6nDds8iEIq
-        7Q5PqqfTRmsh2mM3TJkOW2tnf23q8OWATJMvSxRS6f1AO5qT7qMNA3T/rPtqYQ0r0n/r51b5OqqltBpS
-        Maql9AfRKj/IRNNQ8fPp39Mm2dtzd6Ek2jWj2zF2VodtmSXHrO1IJVmMO6NEIxX0nrTDNtgjSu9Wagm0
-        ytfR56spIMWoltK6Ilb5QQepoDT3Hzcv5jI2dd0sW0STFMNoMqNVNgaQCkqx5+KBtHYp5vXbNx133FdT
-        +bNXG2up97Xz7L88WIu5dANSQSk0UiKMNnGzyhZRp26YR6uPzbKxgFTQkX2jfzfVUmpt7dRhq9+Hm7ap
-        w3kQF3PpBqSCjiyuNW9yfeZW5z2iRu9dzUs38mCp80Zvgw5SQVs0LyqspbRilT4zq3wdLe/ctB1prZba
-        fWG/WT4mkApaosGvK8Zu8cPjp8zyRawlxwZ5MZduQCpoibauCWspDSvqtPuGJhqGi5uqluo0NjAWopFK
-        m4FpYO3Q+Ekoie5Xq3F3Gumw8mI1/zQaKbPk2PjDm3npRu7M3TXLxkgUUn0z9EPaTEu6j3bUsPbQPTlx
-        rqmWKtNhq+FizduRvktHtlvlYyQKqazRz6R8NC6veD9VS4W7byiHxo5tKGehGinMjelbZtlYiUKqI9eQ
-        ajM5dv3khvupPaLCWmpu5dGGMhaqpfTuVIyWc+5mFHwMRPL4t6NpJ3NSLuqDKnbiancOTQcJU6bDdsoY
-        G6hWQKtszETVULH34sF0fo72jIXOHBg91DT1QvtIhSPRp5dnN5Sx2DXyZ166EdVS24+33440RqKRCjbP
-        tzUBtKpRmN9qwljli0wvzeSls+jx8fw/o2bZ2EEq+MiFu6P53W/k7bu3afO7Vb6OHg3D6BFSrbJW+dhB
-        KvjInfnmlrt6FteWk4NXjprHabO9YlRLxbaYSzcgFXxE707tonct9QdqblX9GI0NDKPm+BinyZcFqeAj
-        ajYvE9VEml/1+8jeZOnZcv7TLPrdqYlz5vk/F5AKPrJqDJ5tl7AvS9E5Om30FjtIBR8JpdKjnkakaxBt
-        mUiycHTG5whSwUfC9fzuLTxIf65R6Vq8pdPailpy7HOvpQRSwUdCqbQ2YPH3+pystSrquTlze0P5z5Vo
-        pNKikFpMU8sPQzPaUEBTPax7J7SNTThu78b0xMffa8SKpLHeo+pBqowopNKAzRev1/MjSbu0GmmuiYWh
-        VJcmx9Lf6f5qikinIFVGFFKxQUH53H+cvSeF7Dy7p0mqi3cvp6Mlyq5Tj1QZUUilJbRIuYw/bDzSFfnj
-        QvNimWr90xY5VsJlnBWkyohCKvXea1fz8EWbbMz8ykLLUeP7Rw+1fV8qZnppNtk2tCP/r0aQKiOahgrx
-        1bHv0y1ddkATnfbTtRZ5CaPHw/p7lgiDVBlRSQXVGb5xqq1Ur96+SrcWLR4TBqkykApSNPepVZbWls1N
-        3cIgVQZSQUorqe7MT6afj3VMGKTKQCpICRsqtMyYhiZZZeuEQaoMpIKPaBUlLfP8cGkm2X1+n1mmSBik
-        ykAqqEwYpMpAKqhMGKTKQCqoTBikykAqqEwYpMqIRqpDV4eS2eW5ZO3lMzBYevYk3aPXc0GWMEiVEYVU
-        O8/tadppgtjRxtbWPaxCGKTKiEKq0xMj+VGkUzT1w2vKexikyohCql3UVKUzQk3Vc6J5pzpy7XjyaHUh
-        ef7yeTrXBzaiRVm0A4futXX/qhAGqTKikQq2njBIlYFUUJkwSJWBVFCZMEiVgVRQmTBIlYFUUJkwSJWB
-        VFCZMEiVgVRQmTBIlYFUUJkwSJWBVFCZMEiVgVRQmTBIlYFUUJkwSJWBVFCZMEiVgVRQmTBIlYFUUJkw
-        SJWBVFCZMEiV0bdSTcwgVb8TBqky+lYqbTeqTZtnnkC/EgapMvpWKjJ4QaqMvpGKNSYGP0iV0RdSfXHk
-        2+Tx06X8oyGDGO0Yog3Nrc/3c6MvpBK/nN2dzK88Mhctgf7m6fpaMjZ1Pf3jaH22nxt9IxVALCAVgDNI
-        BeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNI
-        BeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNI
-        BeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNI
-        BeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNI
-        BeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QAziAVgDNIBeAMUgE4g1QArmxL/g8y
-        Eq6DM11CiQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAANUAAAEuCAYAAAAZYlftAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAADt0RVh0Q29tbWVudAB4cjpkOkRBRjFOWk1iWFBROjIsajoxNTYzMTU5NDE3Mzc2
+        NDcyNDQ0LHQ6MjMxMTI1MjGCddpQAAAU8UlEQVR4Xu2daXvT1hZG7///Abe9bSlt6QQtpQylTAkzYQgE
+        CAQogUAmQhISAoSpgK5fScbK8bYtK9vBPqz3edaHJkcSlb1ypDP+57+HtyUA4AdSATiDVADOIBWAM0gF
+        4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF
+        4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF
+        4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF
+        4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF
+        4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4EzfSPXHhf3JyvPV5MOH
+        D9AlD5dmkm+HfzTvK2w9fSHVl0e+TZafrSSkepaeLSNWn9AXUv3v6HfJ+w/v868HqZpHqwvJV7V7ad1j
+        2Dr6RiriEz0K6n5a9xm2hr6V6un6WnJr9p/k9txdCJiYvZP8+/5dfqeag1iflr6V6lbti2OVhYyXb17l
+        d8rO5MJU8kXtXdU6FnoLUg0onaRSbs7cRqxPAFINKGWkUlKxDiPWVoJUA0oo1eqLp8nSsyf5f23Mlanr
+        5jmgNyDVgBJKtbi2lHx34ufk8dOl/CcbM/LPJfM84A9SDSiWVLqPP57alay9fJb/dGNG7iDWVoBUA0or
+        qfS7dmKdmjjXdC7wJXqp1Pp18MqR5PiN0+njkVXGiy+PbK9d62h6rV4PGWonlWgllsYKHrt+YsO5wJeo
+        pZJQ6iit58Xr9fTLZpX14J/5yfxKSfL81Yvk+xO/mOU86CSV2HXuz+TV29d5iUYk1tFriNUropZqx6md
+        TV+qc3cummU3y89nfm+61qlbvXvUKiOV+G2ktViqVcPysHmiluqn078lb/99m58xy+X718yym2X3hf3J
+        u2Do0LUHN8yyHpSVSkis14ZYb9/9m+y9dNA8BqoTrVSaTvLX5SPJv7UvTjG35/5JvhnaYR5TFb1LHbl2
+        PHn/fuNI+7uP7iVfH/vBPGazdCOVOHD5cJP0CmL5E51U+hKP3hsz/zIrH2royz+1+DB957DOURbJOTo5
+        lrwKvuD1pNf68D65t/Ag+fXsH+Y5qtKtVEJ/ZFqJtfv8PvMY6J6opNI7lEYWlI1qsRM3z5jn6oTeoVbX
+        1/IzdY6u5dnqVkUq8dcVW6z11y+TX8/sNo+B7ohGqm3DP3YlVD2qtQ5dHTLP2YrvTvySrLxYzc9QPu9q
+        19KX2jpnt1SVSqjJXw0VYSTWL4i1aaKR6urUeH5k99HcrW76lcYfTuRHdh+tw+HxTrcZqcTJibMtxepl
+        t8PnQBRSqebQlyHM/ccP0gaEvRcPpi/j+0cPJZfvXa29b73JSzRy7PpJ89whP5z8Ne3vCnP/8cPk8NXh
+        wrUOp+92b4LWR0X/Juvc3bBZqUQrsVTjf3e8tx3lMROFVHsuHsiPakQdsVZZkbWEhS11982yIftG/276
+        It6pXavV9IpDY8ea3mE0o9kq2w0eUgn9kUEsX6KQSu8IYdq9u6iFcDmYJjG38sgsG2Jd68+Lf5llhf7f
+        1tY3DheaXp5Nm/yt8mXxkkqMTV03xVqpicUKTd0ThVRHrg3nRzWin1llhWqVmeW5vGQWPSpaZUOOXj+R
+        H9GImqqtsnXmVxbyklkmF8rViu3wlEq0Emt+daH2R+h78xiwiUIqjRgIvxCPny4m24//ZJYX6pd58epF
+        Wlbj9Mr2I+25cKDpcW7x6VKybbh144P+fXUJnr187tJn5S2VuDt/Lz/bxuiPAmKVJwqp1Jr25HnzYpwv
+        37xMR1BoUK24MX0ruXD3cvpOpWsKtXRpRIR1Xgs9OqoFL8z66/X0Xal+rfHpifRaqsWqXqsdvZBKNbhG
+        gViRWJs9/+dCFFKJ4fFT+ZHloha84zeqdfyenDiXn6Vc1DJZtZO5Fb2QSmhkfyuxJh/dZyGZEkQj1ZdH
+        t6cteN3m+sObXS+M0u6L1y4aYNvPNVUd3Q813FjRPUas9kQjlfiq9txfnD9VNlWmg+gdQysVfUhH+JXP
+        2dvnzfN1Sy+lErqX8y3FuodYbYhKqjp/XDiQPqq8+be5k9eKHs80btA6VyfUnK6FK8teSzJ4TF7stVQi
+        E2tjy2U9GsFiHbMZhq6fTBuN1Jhz9vaF9PpWuX4nGqkkkhol1ECwozDMRh+MGgj0sx0nd6ajKqyGhtO3
+        Rjacrx27z+9Pr6WGD52z/vPwWvtq19IQqDAe60RshVRCjUDWOEfV0GqGt46pwq5ze5pacNX4c2piZOBq
+        xSik0mTE4lQPdex+M9R6HtPO2gcYDh+6V6ttrLIhag5vvla75vS9TRMl2432KMtWSSW2H//ZFqsmgYdY
+        kkbDvFpFf5jUEDUockUh1cmbZ/OjsqgfSTWXVVaoRllaW85LZ9nMiIp287L0RQhrq9knc5tusNhKqYSG
+        LLUSa7M1r/r+OkXX0Wf291j/LwEQhVSHxobyoxrRl98qK74/8evHjt96tFOGVTZEg2bDtLuWHgPVX1aM
+        3vesst0QSqWJksV+sl6g4VVWNiOW/uhML9nntaJr6Q9IP89WjkIqzQEKN4178Wo9fU4Py6rzVtvRhLk0
+        OdZU1mLXyJ9NU/S1FJhGTYRl9VhoNb1rtnBYtltCqT519GXfe+lv89/aDnXEh1HDUTiMLIyuN/dkPq3l
+        rPN+SqKQSsdb/SoSTY9e+oBmao9cC6uPzakY+pkloIUe26wWMX3IGtldv9aj2rVC+RQ9mvZimFI/RH1+
+        1r+1FbqX+kyK0X08c+t88kXt9xoUreFm7fK+Vl41tFf/nwdRSCX0F6/qFqfqb7LO2YpWi6iUyY2ZW113
+        NltMtXmx/1Tp9j5KmjCq9YtN6bpXGhxttaLWIxE95qh5EY1UQovwdxt1cFaZ3nDh7mj6YXYT/dX1mPUr
+        1K+mx59u/w29TDdSqWYJuzb0/zI0fsosr3evofGsH8uK+rWs4z4FUUmlv2oaz2ctHhlGH+Cd2ruV1raw
+        zlUGjedrtWpTGL3oewnVD+heh+lGKi2CE0YTRzuNx9SCO+ETydt3b9NuEqv8pyAqqep8O/xT+lz+YHGm
+        6S+5HiM023Wn05JhklIdx2o9DK+lR5nL96/VrtU/H7gnYcpKpR30w4mb9egequ9PM6atY631QTTz2ir7
+        qYhSqjrWCrVXIlmhth8IU1YqNb93iuTS4/K+QouiWnnDe6zhYT9WHGLWKz47qVRzWGU3SzpyImjt08Iv
+        VtlYCFNGKtVSGttXNpJLLbt/1P5o6XE9TLctjltB1FKFawHqAzrYox55DYsKW6jUSmiVjYUwZaSyGpP0
+        uNdqB8h69NmFMwL07vxDYexlvxC1VELT5hfXltP3G83E7eX4MfXyP15bSq91vvbl6ae+k14QppNUX9f+
+        8IT9a2p00CBnNXxo/Y9uFkTt1yeB6KWC3hGmk1QXJ6/kJRuZWZ7dUEZyqVW1VdN5PRqW1a9LqCEVVCZM
+        O6m0CE8450xLbrfaGEHfCbWqhuMm61E/oXVcP4BUUJkw7aRSA1GYqcVps2wRa9SF5llt6+M+P6SCyoRp
+        JZWWyg7HQZYZA6l3Uo0aKUYNFl5LEvQKpILKhGkl1fj0rbxEI3fmOnfYHrp6LC/dyNr6WvLV0f6eZo9U
+        UJkwllRaXiDssFWt1WnLnv8d3d40Ql21lDZVsMr3E0gFlQljSVXcsb+eMh22R68dz0s3ogVTJZtVvp9A
+        KqhMmFAq1UaqXYpRLaV3rGK5EH0fwv4q9WepH8sq328gFVQmTCiVFtMJU2Y85LCxDsjSsycs/NINSDWY
+        hClKpbGQYdRPpRkExXOEaLmDsONX/Vle27puBdFIdfjqUDrNXUOEoBwLTxe73u+4SJiiVNr9P0yZwcxn
+        bp/PSzeif6dVtl+JQipNUKs6vf1zj9552i2x1o4wdak0XSPMy9cv01ooPEcRdeiGtZQmLmpsoFW+X4lC
+        qtMTI/lRpEq0bqJ1XzsRpi5VuAa7xNXo9PD4kIt3L+dHNDK7PGeW7WeikEorIVFTVYu+8Hr/se5rJ8JI
+        KtUqYbRcXJlaSoNki9G7VD+v79eKaN6p9G6gIS31Be6hM3oH9Xynmpi93bSXctphW6Im1IzsMGWX4u43
+        opEKtp4w2kgvjOTtNK9Mu6CEM7T15FG1Bv3UIBVUplNUS2lkhHVskbGp8fyIRrS5nFV2EEAqqEynaF0/
+        TTq0jq2jsYF6dypGoy60vohVfhBAKqhMu6iWOnxt2DyuyMTM7fyIRrRGolV2UEAqqEy7aCEX65gi6cYS
+        QS2lURceO01+SpAKKtMqqqU6DSvSY6G2FApz9YH/tqdbDVJBZVpl9sm8Wb6IVgiWfMVoCe1Br6UEUkFl
+        rEiUTntGqZZ6sDidH9HIpckrZvlBA6mgMla0P5dVtog2Ig+jWqrK7iv9SFRS6TxasVST4KAzul/WfSyD
+        NtcOo1qq02IuqqX0eFiMjjt356JZfhCJQir12KsDUbND9QFBOXS/rtbum3VPO6HJhmEmSwwrsrYj1f7L
+        Xxc2eht0opDKmmpAyuevy91NANTm4M1Ljr3vuJiLZu4+Wt24tavk7qcN2zyIQirtDk+qp9NGayHaYzdM
+        mQ5ba2d/berw5YBMky9LFFLp/UA7mpPuow0DdP+s+2phDSvSf+vnVvk6qqW0GlIxqqX0B9EqP8hE01Dx
+        8+nf0ybZ23N3oSTaNaPbMXZWh22ZJces7UglWYw7o0QjFfSetMM22CNK71ZqCbTK19HnqykgxaiW0roi
+        VvlBB6mgNPcfNy/mMjZ13SxbRJMUw2gyo1U2BpAKSrHn4oG0dinm9ds3HXfcV1P5s1cba6n3tfPsvzxY
+        i7l0A1JBKTRSIow2cbPKFlGnbphHq4/NsrGAVNCRfaN/N9VSam3t1GGr34ebtqnDeRAXc+kGpIKOLK41
+        b3J95lbnPaJG713NSzfyYKnzRm+DDlJBWzQvKqyltGKVPjOrfB0t79y0HWmtltp9Yb9ZPiaQClqiwa8r
+        xm7xw+OnzPJFrCXHBnkxl25AKmiJtq4JaykNK+q0+4YmGoaLm6qW6jQ2MBaikUqbgWlg7dD4SSiJ7ler
+        cXca6bDyYjX/NBops+TY+MObeelG7szdNcvGSBRSfTP0Q9pMS7qPdtSw9tA9OXGuqZYq02Gr4WLN25G+
+        S0e2W+VjJAqprNHPpHw0Lq94P1VLhbtvKIfGjm0oZ6EaKcyN6Vtm2ViJQqoj15BqMzl2/eSG+6k9osJa
+        am7l0YYyFqql9O5UjJZz7mYUfAxE8vi3o2knc1Iu6oMqduJqdw5NBwlTpsN2yhgbqFZAq2zMRNVQsffi
+        wXR+jvaMhc4cGD3UNPVC+0iFI9Gnl2c3lLHYNfJnXroR1VLbj7ffjjRGopEKNs+3NQG0qlGY32rCWOWL
+        TC/N5KWz6PHx/D+jZtnYQSr4yIW7o/ndb+Ttu7dp87tVvo4eDcPoEVKtslb52EEq+Mid+eaWu3oW15aT
+        g1eOmsdps71iVEvFtphLNyAVfETvTu2idy31B2puVf0YjQ0Mo+b4GKfJlwWp4CNqNi8T1USaX/X7yN5k
+        6dly/tMs+t2piXPm+T8XkAo+smoMnm2XsC9L0Tk6bfQWO0gFHwml0qOeRqRrEG2ZSLJwdMbnCFLBR8L1
+        /O4tPEh/rlHpWryl09qKWnLsc6+lBFLBR0KptDZg8ff6nKy1Kuq5OXN7Q/nPlWik0qKQWkxTyw9DM9pQ
+        QFM9rHsntI1NOG7vxvTEx99rxIqksd6j6kGqjCik0oDNF6/X8yNJu7Qaaa6JhaFUlybH0t/p/mqKSKcg
+        VUYUUrFBQfncf5y9J4XsPLunSaqLdy+noyXKrlOPVBlRSKUltEi5jD9sPNIV+eNC82KZav3TFjlWwmWc
+        FaTKiEIq9d5rV/PwRZtszPzKQstR4/tHD7V9Xypmemk22Ta0I/+vRpAqI5qGCvHVse/TLV12QBOd9tO1
+        FnkJo8fD+nuWCINUGVFJBdUZvnGqrVSv3r5KtxYtHhMGqTKQClI096lVltaWzU3dwiBVBlJBSiup7sxP
+        pp+PdUwYpMpAKkgJGyq0zJiGJlll64RBqgykgo9oFSUt8/xwaSbZfX6fWaZIGKTKQCqoTBikykAqqEwY
+        pMpAKqhMGKTKQCqoTBikyohGqkNXh5LZ5blk7eUzMFh69iTdo9dzQZYwSJURhVQ7z+1p2mmC2NHG1tY9
+        rEIYpMqIQqrTEyP5UaRTNPXDa8p7GKTKiEKqXdRUpTNCTdVzonmnOnLtePJodSF5/vJ5OtcHNqJFWbQD
+        h+61df+qEAapMqKRCraeMEiVgVRQmTBIlYFUUJkwSJWBVFCZMEiVgVRQmTBIlYFUUJkwSJWBVFCZMEiV
+        gVRQmTBIlYFUUJkwSJWBVFCZMEiVgVRQmTBIlYFUUJkwSJWBVFCZMEiVgVRQmTBIlYFUUJkwSJXRt1JN
+        zCBVvxMGqTL6ViptN6pNm2eeQL8SBqky+lYqMnhBqoy+kYo1JgY/SJXRF1J9ceTb5PHTpfyjIYMY7Rii
+        Dc2tz/dzoy+kEr+c3Z3MrzwyFy2B/ubp+loyNnU9/eNofbafG30jFUAsIBWAM0gF4AxSATiDVADOIBWA
+        M0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWA
+        M0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWA
+        M0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWA
+        M0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWA
+        M0gF4AxSATiDVADOIBWAM0gF4AxSATiDVADOIBWAM0gF4AxSATiDVACubEv+DzISroMzXUKJAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
